editors/tree-sitter-nest/grammar.js
    source_file: $ => optional($._items),

    _items: $ => seq(
      $._item,
      repeat(seq($._separator, $._item)),
      optional($._separator),
    ),

    declaration: $ => seq(
      repeat($.attribute),
      repeat($.directive),
      choice($.const_binding, $.static_declaration, $.let_declaration),
    ),

    attribute: $ => prec.right(seq(
      '@',
      field('name', alias($.identifier, $.attribute_name)),
      optional($.arguments),
    )),

    directive: $ => prec.right(choice(
      seq(field('name', $.directive_name), optional($.arguments)),
      // `#when` has an argument grammar of its own: `=` is not an expression
      // and `not` is a keyword, so its conditions cannot be `arguments`.
      seq(field('name', $.when_directive_name), optional($.when_arguments)),
    )),

    directive_name: _ => token(seq('#', /[A-Za-z_][A-Za-z0-9_]*/)),

    when_directive_name: _ => token(prec(1, '#when')),

    when_arguments: $ => seq('(', commaSep1($.when_condition), ')'),

    when_condition: $ => choice(
      seq(field('key', $.identifier), '=', field('value', $.enum_literal)),
      seq(
        field('name', choice($.identifier, 'not')),
        '(',
        commaSep1($.when_condition),
        ')',
      ),
      field('flag', $.identifier),
    ),

    const_binding: $ => seq(
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '::',
      repeat($.directive),
      field('value', $._binding_value),
    ),

    // `#static name: T := value`, and a trait's `NAME: T` with no value.
    static_declaration: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq(choice(':=', '='), field('value', $._expression))),
    ),

    _binding_value: $ => choice(
      $._expression,
      $.import_expression,
      $.struct_type,
      $.enum_type,
      $.trait_type,
      $.namespace_expression,
      $.distinct_type,
      $.pointer_type,
      $.dyn_type,
    ),

    let_declaration: $ => seq(
      choice('let', 'const'),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      ':=',
      field('value', $._expression),
    ),

    import_expression: $ => seq(
      'import',
      field('path', choice($.package_path, $.string)),
    ),

    package_path: _ => token(seq('<', /[A-Za-z_][A-Za-z0-9_]*(\/[A-Za-z_][A-Za-z0-9_]*)*/, '>')),

    impl_block: $ => seq(
      'impl',
      optional(field('generics', $.generic_parameters)),
      field('type', $._type),
      optional(seq('for', field('target', $._type))),
      field('body', $.item_body),
    ),

    extern_block: $ => seq(
      'extern',
      '(',
      field('abi', $.string),
      ')',
      field('body', $.item_body),
    ),

    item_body: $ => seq('{', optional($._items), '}'),

    namespace_expression: $ => seq('namespace', field('body', $.item_body)),

    // ===< Types >===

    _type: $ => choice(
      $.type_path,
      $.pointer_type,
      $.slice_type,
      $.array_type,
      $.tuple_type,
      $.dyn_type,
      $.func_type,
    ),

    type_path: $ => prec.right(seq(
      choice(
        alias($.identifier, $.type_identifier),
        seq($.identifier, repeat1(seq('.', $.identifier))),
      ),
      optional($.generic_arguments),
      repeat(seq('.', $.identifier, optional($.generic_arguments))),
    )),

    generic_arguments: $ => seq(
      '.<',
      commaSep1(choice(
        $._type,
        $.integer,
        $.associated_binding,
      )),
      '>',
    ),

    pointer_type: $ => prec.right(seq('*', optional('mut'), $._type)),

    slice_type: $ => prec.right(seq('[', ']', optional('mut'), $._type)),

    tuple_type: $ => seq('(', commaSep($._type), ')'),

    func_type: $ => prec.right(seq(
      'func',
      optional($.generic_parameters),
      $.parameters,
      optional(seq('->', field('return_type', $._type))),
    )),

    distinct_type: $ => seq('distinct', $._type),

    struct_type: $ => prec.right(seq(
      'struct',
      optional(field('generics', $.generic_parameters)),
      optional(choice($.field_list, $.tuple_type)),
    )),

    field_list: $ => seq('{', commaSep($.field_declaration), '}'),

    field_declaration: $ => seq(
      repeat($.attribute),
      field('name', alias($.identifier, $.field_identifier)),
      ':',
      field('type', $._type),
    ),

    enum_type: $ => seq(
      'enum',
      optional(field('generics', $.generic_parameters)),
      '{',
      commaSep($.variant),
      '}',
    ),

    variant: $ => seq(
      repeat($.attribute),
      field('name', $.identifier),
      optional(choice($.tuple_type, $.field_list)),
      optional(seq('=', field('value', $._expression))),
    ),

    trait_type: $ => seq(
      'trait',
      optional(field('generics', $.generic_parameters)),
      field('body', $.item_body),
    ),

    generic_parameters: $ => seq(
      '<',
      commaSep1($.generic_parameter),
      '>',
    ),

    generic_parameter: $ => choice(
      seq(
        field('name', alias($.identifier, $.type_identifier)),
        optional(seq(':', field('bounds', $.bounds))),
      ),
      seq('const', field('name', $.identifier), ':', field('type', $._type)),
    ),

    bounds: $ => prec.right(seq($._type, repeat(seq('+', $._type)))),

    // ===< Functions >===

    func_expression: $ => prec.right(seq(
      optional($.extern_specifier),
      'func',
      optional(field('generics', $.generic_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional(field('body', $.block)),
    )),

    extern_specifier: $ => seq('extern', '(', $.string, ')'),

    parameters: $ => seq('(', commaSep(choice($.parameter, $._type)), ')'),

    parameter: $ => seq(
      optional('mut'),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq(':=', field('default', choice($._expression, $.directive)))),
    ),

    // ===< Statements >===

    block: $ => seq(
      '{',
      optional(seq(commaSep1($.closure_parameter), '=>')),
      optional($._statements),
      '}',
    ),

    closure_parameter: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
    ),

    _statements: $ => seq(
      $._statement,
      repeat(seq($._separator, $._statement)),
      optional($._separator),
    ),

    expression_statement: $ => $._expression,

    return_statement: $ => prec.right(seq('return', optional($._expression))),

    break_statement: $ => prec.right(seq('break', optional($._expression))),

    loop_expression: $ => seq('loop', field('body', $.block)),

    while_statement: $ => seq(
      'while',
      field('condition', $._expression),
      field('body', $.block),
    ),

    for_statement: $ => seq(
      'for',
      field('pattern', $._pattern),
      'in',
      field('iterator', $._expression),
      field('body', $.block),
    ),

    // ===< Expressions >===

    _expression: $ => choice(
      $.identifier,
      $.integer,
      $.float,
      $.boolean,
      $.string,
      $.byte_string,
      $.c_string,
      $.char,
      $.interpolated_string,
      $.parenthesized_expression,
      $.tuple_expression,
      $.anonymous_composite,
      $.enum_literal,
      $.block,
      $.if_expression,
      $.if_match_expression,
      $.match_expression,
      $.func_expression,
      $.loop_expression,
      $.slice_type,
      $.array_type,
      $.unary_expression,
      $.binary_expression,
      $.range_expression,
      $.field_expression,
      $.generic_expression,
      $.call_expression,
      $.index_expression,
      $.dereference_expression,
      $.try_expression,
      $.method_match_expression,
      $.composite_literal,
      $.trailing_closure,
    ),

    tuple_expression: $ => choice(
      seq('(', ')'),
      seq('(', $._expression, ',', commaSep($._expression), ')'),
    ),

    _composite_body: $ => choice(
      seq(
        commaSep1(choice($.field_initializer, $.base_initializer)),
      ),
      commaSep1($._expression),
      seq($._expression, ';', $._expression),
    ),

    field_initializer: $ => seq(
      field('name', alias($.identifier, $.field_identifier)),
      ':',
      field('value', $._expression),
    ),

    composite_literal: $ => prec.dynamic(-1, seq(
      field('type', choice(
        $.identifier,
        $.field_expression,
        $.generic_expression,
        $.array_type,
        $.slice_type,
        $.enum_literal,
      )),
      '{',
      optional($._composite_body),
      '}',
    )),

    trailing_closure: $ => prec.dynamic(-1, seq(
      field('function', choice($.call_expression, $.field_expression, $.identifier)),
      field('closure', $.block),
    )),

    enum_literal: $ => seq('.', field('name', $.identifier)),

    if_expression: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      optional(seq('else', field('alternative', choice($.if_expression, $.if_match_expression, $.block)))),
    )),

    method_match_expression: $ => prec(PREC.postfix, seq(
      field('value', $._expression),
      '.',
      'match',
      field('body', $.match_block),
    )),

    match_block: $ => seq('{', commaSep($.match_arm), '}'),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('value', $._expression),
    ),

    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice(seq('&', optional('mut')), '-', '!', 'not', '~')),
      field('operand', $._expression),
    )),

    binary_expression: $ => {
      const table = [
        [PREC.or, choice('||', 'or')],
        [PREC.and, choice('&&', 'and')],
        [PREC.compare, choice('==', '!=', '<', '<=', '>', '>=')],
        [PREC.bitor, '|'],
        [PREC.bitxor, '^'],
        [PREC.bitand, '&'],
        [PREC.shift, choice('<<', '>>')],
        [PREC.add, choice('+', '-')],
        [PREC.multiply, choice('*', '/', '%')],
      ];
      return choice(...table.map(([precedence, operator]) => prec.left(precedence, seq(
        field('left', $._expression),
        // @ts-ignore
        field('operator', operator),
        field('right', $._expression),
      ))));
    },

    range_expression: $ => prec.left(PREC.range, choice(
      seq($._expression, choice('..<', '..='), $._expression),
      seq($._expression, '..'),
      seq(choice('..<', '..='), $._expression),
      '..',
    )),

    field_expression: $ => prec(PREC.postfix, seq(
      field('value', $._expression),
      '.',
      field('field', choice(alias($.identifier, $.field_identifier), $.integer)),
    )),

    generic_expression: $ => prec(PREC.postfix, seq(
      field('value', $._expression),
      field('arguments', $.generic_arguments),
    )),

    call_expression: $ => prec(PREC.postfix, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq('(', commaSep(choice($._expression, $.named_argument)), ')'),

    named_argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $._expression),
    ),

    try_expression: $ => prec(PREC.postfix, seq(
      $._expression,
      field('operator', choice('.?', '.!')),
    )),

    // ===< Patterns >===

    _pattern: $ => choice(
      $.identifier,
      $.mut_pattern,
      $.glob_pattern,
      $.literal_pattern,
      $.range_pattern,
      $.variant_pattern,
      $.destructure_pattern,
      $.tuple_struct_pattern,
      $.tuple_pattern,
      $.slice_pattern,
      $.reference_pattern,
      $.or_pattern,
      $.binding_pattern,
    ),

    variant_pattern: $ => prec.right(seq(
      '.',
      field('name', $.identifier),
      optional(choice(
        seq('(', commaSep(choice($._pattern, '..')), ')'),
        seq('{', commaSep(choice($.field_pattern, '..')), '}'),
      )),
    )),

    destructure_pattern: $ => seq(
      choice('{', '.{'),
      commaSep(choice($.field_pattern, '..')),
      '}',
    ),

    field_pattern: $ => choice(
      seq(optional('mut'), field('name', $.identifier)),
      seq(field('name', $.identifier), ':', field('pattern', $._pattern)),
      '*',
    ),

    integer: _ => token(choice(
      /[0-9][0-9_]*/,
      /0[xX][0-9a-fA-F_]+/,
      /0[oO][0-7_]+/,
      /0[bB][01_]+/,
    )),

    escape_sequence: _ => token.immediate(seq(
      '\\',
      choice(
        /[nrt0\\'"]/,
        /x[0-9a-fA-F]{2}/,
        /u\{[0-9a-fA-F]+\}/,
      ),
    )),

    string: $ => seq(
      '"',
      repeat(choice(alias(token.immediate(prec(1, /[^"\\]+/)), $.string_content), $.escape_sequence)),
      token.immediate('"'),
    ),

    byte_string: $ => seq(
      'b"',
      repeat(choice(alias(token.immediate(prec(1, /[^"\\]+/)), $.string_content), $.escape_sequence)),
      token.immediate('"'),
    ),

    interpolated_string: $ => seq(
      'f"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^"\\{}]+/)), $.string_content),
        $.escape_sequence,
        alias(token.immediate('{{'), $.escape_sequence),
        alias(token.immediate('}}'), $.escape_sequence),
        $.interpolation,
      )),
      token.immediate('"'),
    ),

    interpolation: $ => seq(token.immediate('{'), $._expression, '}'),

    char: _ => token(seq(
      '\'',
      choice(
        /[^'\\\n]/,
        /\\[nrt0\\'"]/,
        /\\x[0-9a-fA-F]{2}/,
        /\\u\{[0-9a-fA-F]+\}/,
      ),
      '\'',
    )),

    identifier: _ => /[_\p{L}][_\p{L}0-9]*/,
