editors/tree-sitter-nest/test/corpus/declarations.txt
==============================
Imports, constants and statics
==============================

io :: import <std/io>
util :: import "util.nest"
RED: str :: "\u{1B}[1;31m"
#static n: usize := 0

---

(source_file
  (declaration
    (const_binding
      (identifier)
      (import_expression
        (package_path))))
  (declaration
    (const_binding
      (identifier)
      (import_expression
        (string
          (string_content)))))
  (declaration
    (const_binding
      (identifier)
      (type_path
        (type_identifier))
      (string
        (escape_sequence)
        (string_content))))
  (declaration
    (directive
      (directive_name))
    (static_declaration
      (identifier)
      (type_path
        (type_identifier))
      (integer))))

=====
Types
=====

@public Option :: #lang("option") enum <T> {
  some(T),
  none,
}
Point :: struct { @rename(name: "px") x: i32, y: i32 }
Id :: distinct usize
Hash :: trait {
  hash :: func (self: Self) -> u64
}

---

(source_file
  (declaration
    (attribute
      (attribute_name))
    (const_binding
      (identifier)
      (directive
        (directive_name)
        (arguments
          (string
            (string_content))))
      (enum_type
        (generic_parameters
          (generic_parameter
            (type_identifier)))
        (variant
          (identifier)
          (tuple_type
            (type_path
              (type_identifier))))
        (variant
          (identifier)))))
  (declaration
    (const_binding
      (identifier)
      (struct_type
        (field_list
          (field_declaration
            (attribute
              (attribute_name)
              (arguments
                (named_argument
                  (identifier)
                  (string
                    (string_content)))))
            (field_identifier)
            (type_path
              (type_identifier)))
          (field_declaration
            (field_identifier)
            (type_path
              (type_identifier)))))))
  (declaration
    (const_binding
      (identifier)
      (distinct_type
        (type_path
          (type_identifier)))))
  (declaration
    (const_binding
      (identifier)
      (trait_type
        (item_body
          (declaration
            (const_binding
              (identifier)
              (func_expression
                (parameters
                  (parameter
                    (identifier)
                    (type_path
                      (type_identifier))))
                (type_path
                  (type_identifier))))))))))

=======================
Impls and extern blocks
=======================

impl <T> Try for Option.<T> {
  Output :: T
  unwrap :: func (self: Option.<T>) -> T { return self.! }
}
extern("c") {
  @public write :: func (fd: c.int, buf: c.ptr.<u8>, n: usize) -> isize
}

---

(source_file
  (impl_block
    (generic_parameters
      (generic_parameter
        (type_identifier)))
    (type_path
      (type_identifier))
    (type_path
      (type_identifier)
      (generic_arguments
        (type_path
          (type_identifier))))
    (item_body
      (declaration
        (const_binding
          (identifier)
          (identifier)))
      (declaration
        (const_binding
          (identifier)
          (func_expression
            (parameters
              (parameter
                (identifier)
                (type_path
                  (type_identifier)
                  (generic_arguments
                    (type_path
                      (type_identifier))))))
            (type_path
              (type_identifier))
            (block
              (return_statement
                (try_expression
                  (identifier)))))))))
  (extern_block
    (string
      (string_content))
    (item_body
      (declaration
        (attribute
          (attribute_name))
        (const_binding
          (identifier)
          (func_expression
            (parameters
              (parameter
                (identifier)
                (type_path
                  (type_identifier)
                  (identifier)))
              (parameter
                (identifier)
                (type_path
                  (type_identifier)
                  (identifier)
                  (generic_arguments
                    (type_path
                      (type_identifier)))))
              (parameter
                (identifier)
                (type_path
                  (type_identifier))))
            (type_path
              (type_identifier))))))))

==============================
Conditional compilation
==============================

#when(any(os = .Macos, not(test)))
posix :: namespace { }

---

(source_file
  (declaration
    (directive
      (when_directive_name)
      (when_arguments
        (when_condition
          (identifier)
          (when_condition
            (identifier)
            (enum_literal
              (identifier)))
          (when_condition
            (when_condition
              (identifier))))))
    (const_binding
      (identifier)
      (namespace_expression
        (item_body)))))

==============================
An overload set
==============================

add :: func { add_i32, math.add_f64 }

---

(source_file
  (declaration
    (const_binding
      (identifier)
      (overload_set
        (identifier)
        (field_expression
          (identifier)
          (field_identifier))))))

==============================
Bounds on Self and a pointer type in a tuple
==============================

T :: trait {
  m :: func <Self: Sized, Self.Item: Ord> (self: Self) {}
}
impl <K, V> I for M.<K, V> {
  Item :: (K, *mut V)
}

---

(source_file
  (declaration
    (const_binding
      (identifier)
      (trait_type
        (item_body
          (declaration
            (const_binding
              (identifier)
              (func_expression
                (generic_parameters
                  (generic_parameter
                    (type_identifier)
                    (bounds
                      (type_path
                        (type_identifier))))
                  (generic_parameter
                    (type_identifier)
                    (type_identifier)
                    (bounds
                      (type_path
                        (type_identifier)))))
                (parameters
                  (parameter
                    (identifier)
                    (type_path
                      (type_identifier))))
                (block))))))))
  (impl_block
    (generic_parameters
      (generic_parameter
        (type_identifier))
      (generic_parameter
        (type_identifier)))
    (type_path
      (type_identifier))
    (type_path
      (type_identifier)
      (generic_arguments
        (type_path
          (type_identifier))
        (type_path
          (type_identifier))))
    (item_body
      (declaration
        (const_binding
          (identifier)
          (tuple_expression
            (identifier)
            (pointer_type
              (type_path
                (type_identifier)))))))))

================================================================================
Import destructuring with self
================================================================================

{ self, Json } :: import <std/http>
{ net: { self: n, TcpStream } } :: import <std>

--------------------------------------------------------------------------------

(source_file
  (declaration
    (const_binding
      (destructure_pattern
        (field_pattern
          (identifier))
        (field_pattern
          (identifier)))
      (import_expression
        (package_path))))
  (declaration
    (const_binding
      (destructure_pattern
        (field_pattern
          (identifier)
          (destructure_pattern
            (field_pattern
              (identifier)
              (identifier))
            (field_pattern
              (identifier)))))
      (import_expression
        (package_path)))))

================================================================================
impl inside parameter and return types
================================================================================

twice :: func (s: *impl Shape, xs: []impl Shape) -> (*impl Shape, impl Func(i32) -> i32) {
    return (s, &{ [n] x in x })
}

--------------------------------------------------------------------------------

(source_file
  (declaration
    (const_binding
      (identifier)
      (func_expression
        (parameters
          (parameter
            (identifier)
            (pointer_type
              (impl_type
                (type_path
                  (type_identifier)))))
          (parameter
            (identifier)
            (slice_type
              (impl_type
                (type_path
                  (type_identifier))))))
        (tuple_type
          (pointer_type
            (impl_type
              (type_path
                (type_identifier))))
          (impl_type
            (callable_type
              (type_path
                (type_identifier))
              (type_path
                (type_identifier))
              (type_path
                (type_identifier)))))
        (block
          (return_statement
            (tuple_expression
              (identifier)
              (unary_expression
                (closure_expression
                  (capture_list
                    (identifier))
                  (closure_parameter
                    (identifier))
                  (expression_statement
                    (identifier)))))))))))
