editors/tree-sitter-nest/test/corpus/statements.txt
===========================================
A struct literal is not read in a condition
===========================================

f :: func () {
  if x { a }
  for i in 0..<n { b }
  while ok() { c }
  let p := Point { x: 1 }
}

---

(source_file
  (declaration
    (const_binding
      (identifier)
      (func_expression
        (parameters)
        (block
          (expression_statement
            (if_expression
              (identifier)
              (block
                (expression_statement
                  (identifier)))))
          (for_statement
            (identifier)
            (range_expression
              (integer)
              (identifier))
            (block
              (expression_statement
                (identifier))))
          (while_statement
            (call_expression
              (identifier)
              (arguments))
            (block
              (expression_statement
                (identifier))))
          (declaration
            (let_declaration
              (identifier)
              (composite_literal
                (identifier)
                (field_initializer
                  (field_identifier)
                  (integer))))))))))

===================================================
A line starting with a dot continues the one before
===================================================

f :: func () {
  let q := v
    .map()
  g()
}

---

(source_file
  (declaration
    (const_binding
      (identifier)
      (func_expression
        (parameters)
        (block
          (declaration
            (let_declaration
              (identifier)
              (call_expression
                (field_expression
                  (identifier)
                  (field_identifier))
                (arguments))))
          (expression_statement
            (call_expression
              (identifier)
              (arguments))))))))

================================
Match, try and trailing closures
================================

f :: func () -> i32 {
  let s := x.match { .some(v) => v, .none => 0 }
  items.each() { v in g(v) }
  let r := cast.<[]u8>(y).?
  return loop { break 1 }
}

---

(source_file
  (declaration
    (const_binding
      (identifier)
      (func_expression
        (parameters)
        (type_path
          (type_identifier))
        (block
          (declaration
            (let_declaration
              (identifier)
              (method_match_expression
                (identifier)
                (match_block
                  (match_arm
                    (variant_pattern
                      (identifier)
                      (identifier))
                    (identifier))
                  (match_arm
                    (variant_pattern
                      (identifier))
                    (integer))))))
          (expression_statement
            (trailing_closure
              (call_expression
                (field_expression
                  (identifier)
                  (field_identifier))
                (arguments))
              (closure_expression
                (closure_parameter
                  (identifier))
                (expression_statement
                  (call_expression
                    (identifier)
                    (arguments
                      (identifier)))))))
          (declaration
            (let_declaration
              (identifier)
              (try_expression
                (call_expression
                  (generic_expression
                    (identifier)
                    (generic_arguments
                      (slice_type
                        (type_path
                          (type_identifier)))))
                  (arguments
                    (identifier))))))
          (return_statement
            (loop_expression
              (block
                (break_statement
                  (integer))))))))))

=======
Strings
=======

f :: func () {
  io.println(f"a{g(1)}b{{")
  let c := 'λ'
  let b := b"\x00"
}

---

(source_file
  (declaration
    (const_binding
      (identifier)
      (func_expression
        (parameters)
        (block
          (expression_statement
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments
                (interpolated_string
                  (string_content)
                  (interpolation
                    (call_expression
                      (identifier)
                      (arguments
                        (integer))))
                  (string_content)
                  (escape_sequence)))))
          (declaration
            (let_declaration
              (identifier)
              (char)))
          (declaration
            (let_declaration
              (identifier)
              (byte_string
                (escape_sequence)))))))))

=================
Format specifiers
=================

f :: func () {
  io.println(f"{n:>8} {n:?} {P { x: 1 }.x}")
}

---

(source_file
  (declaration
    (const_binding
      (identifier)
      (func_expression
        (parameters)
        (block
          (expression_statement
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments
                (interpolated_string
                  (interpolation
                    (identifier)
                    (format_spec))
                  (string_content)
                  (interpolation
                    (identifier)
                    (format_spec))
                  (string_content)
                  (interpolation
                    (field_expression
                      (composite_literal
                        (identifier)
                        (field_initializer
                          (field_identifier)
                          (integer)))
                      (field_identifier))))))))))))

================================================================================
Closures, capture lists and callable types
================================================================================

apply :: func (f: impl Func(i32) -> i32, g: *func(i32) -> i32, h: *extern("c") func()) -> i32 {
  const double := { x in x * 2 }
  const add := { a: i32, b: i32 -> i32 in a + b }
  const now := { in clock() }
  const scaled := { [n] x in x * n }
  spawn() { work() }
  return f(1)
}

--------------------------------------------------------------------------------

(source_file
  (declaration
    (const_binding
      (identifier)
      (func_expression
        (parameters
          (parameter
            (identifier)
            (impl_type
              (callable_type
                (type_path
                  (type_identifier))
                (type_path
                  (type_identifier))
                (type_path
                  (type_identifier)))))
          (parameter
            (identifier)
            (pointer_type
              (func_type
                (parameters
                  (type_path
                    (type_identifier)))
                (type_path
                  (type_identifier)))))
          (parameter
            (identifier)
            (pointer_type
              (func_type
                (extern_specifier
                  (string
                    (string_content)))
                (parameters)))))
        (type_path
          (type_identifier))
        (block
          (declaration
            (let_declaration
              (identifier)
              (closure_expression
                (closure_parameter
                  (identifier))
                (expression_statement
                  (binary_expression
                    (identifier)
                    (integer))))))
          (declaration
            (let_declaration
              (identifier)
              (closure_expression
                (closure_parameter
                  (identifier)
                  (type_path
                    (type_identifier)))
                (closure_parameter
                  (identifier)
                  (type_path
                    (type_identifier)))
                (type_path
                  (type_identifier))
                (expression_statement
                  (binary_expression
                    (identifier)
                    (identifier))))))
          (declaration
            (let_declaration
              (identifier)
              (closure_expression
                (expression_statement
                  (call_expression
                    (identifier)
                    (arguments))))))
          (declaration
            (let_declaration
              (identifier)
              (closure_expression
                (capture_list
                  (identifier))
                (closure_parameter
                  (identifier))
                (expression_statement
                  (binary_expression
                    (identifier)
                    (identifier))))))
          (expression_statement
            (trailing_closure
              (call_expression
                (identifier)
                (arguments))
              (block
                (expression_statement
                  (call_expression
                    (identifier)
                    (arguments))))))
          (return_statement
            (call_expression
              (identifier)
              (arguments
                (integer)))))))))

==================
Bare trailing closures and spread types
==================

h :: func <Rest> (t: (i32, ..Rest)) {
    app.use { ctx, next in next.run(ctx) }
    const p := P { a, b }
}

---

(source_file
  (declaration
    (const_binding
      pattern: (identifier)
      value: (func_expression
        generics: (generic_parameters
          (generic_parameter
            name: (type_identifier)))
        parameters: (parameters
          (parameter
            name: (identifier)
            type: (tuple_type
              (type_path
                (type_identifier))
              (spread_type
                (type_path
                  (type_identifier))))))
        body: (block
          (expression_statement
            (trailing_closure
              function: (field_expression
                value: (identifier)
                field: (field_identifier))
              closure: (closure_expression
                (closure_parameter
                  name: (identifier))
                (closure_parameter
                  name: (identifier))
                (expression_statement
                  (call_expression
                    function: (field_expression
                      value: (identifier)
                      field: (field_identifier))
                    arguments: (arguments
                      (identifier)))))))
          (declaration
            (let_declaration
              pattern: (identifier)
              value: (composite_literal
                type: (identifier)
                (identifier)
                (identifier)))))))))
